# immersed-privacy

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: default.yaml
configs/eval/: tier1.yaml  tier2.yaml  tier2_no_audio.yaml  tier2_text_only.yaml  tier3.yaml  tier3_no_audio.yaml
configs/models/: doubao_seed_2_0_lite.yaml  gemini_3_1_pro.yaml  gemini_3_1_pro_wo_thinking.yaml  gemini_3_flash.yaml  gemini_3_flash_wo_thinking.yaml  gpt_4o_mini.yaml  gpt_5_4.yaml  qwen3_5.yaml  qwen3_5_thinking.yaml  qwen3_8b.yaml  qwen3_omni_flash.yaml  qwen3_omni_flash_thinking.yaml
dataset/tier2/scene_000_state_000_var000/: metadata.json  question.json
dataset/tier2/scene_000_state_001_var000/: metadata.json  question.json
mllm_eval/: requirements.txt
mllm_eval/data/: __init__.py  dataset.py  schema.py
mllm_eval/inference/: __init__.py  batch.py  prompt_builder.py  runner.py
mllm_eval/metrics/: base.py  registry.py  tier1_metrics.py  tier2_metrics.py  tier3_metrics.py
mllm_eval/models/: base.py  dashscope_backend.py  google_backend.py  openai_backend.py  registry.py  vllm_backend.py  vllm_local_backend.py  volcengine_backend.py
mllm_eval/reporting/: aggregator.py  export.py
mllm_privacy/: __init__.py  tier1.py  tier2.py  tier3.py
mllm_privacy/eai_bench/: tier_1.json  tier_2.json  tier_3.json
mllm_privacy/prompts/: tier1_variations_5_items_30_prompts.json
mllm_privacy/utils/: __init__.py  camera.py  pddl_mapping.py  prompt_utils.py  scene_graph.py
scripts/: _discover.py  run_eval.py  run_open_source_by_tier.sh  run_vllm_local_all.sh
(+49 files in other folders)
