[project]
name = "mllm-privacy"
version = "0.1.0"
description = "Evaluation of privacy awareness of multimodal large language models in simulated environments."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

dependencies = [
    "certifi>=2024.7.4",
    "chardet>=3.0.4",
    "idna>=2.8",
    "matplotlib>=3.4.2",
    "networkx>=2.3",
    "numpy>=1.19.3",
    "opencv-python>=4.8.1.78",
    "pillow>=8.3.1",
    "plotly>=3.10.0",
    "requests>=2.32.2",
    "ipdb>=0.13.9",
    "termcolor>=1.1.0",
    "tqdm>=4.66.3",
    "urllib3>=1.24.3",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mllm_privacy"]
